Bug 10775 - xclock does not set WMPid
Summary: xclock does not set WMPid
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-26 15:15 UTC by John Tapsell
Modified: 2007-06-12 19:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description John Tapsell 2007-04-26 15:15:02 UTC
In kde's task manager (ksysguard) we associate processes with their windows.  However xclock does not set WMPid.

Could it be fixed to set NET::WMPid ?
Comment 1 Alan Coopersmith 2007-06-12 19:15:40 UTC
Fixed in git master for next xclock release (should be 1.0.3):

commit 300afc5784cec539a1a9d2babb9f73056aee52cd
Author: Alan Coopersmith <alan.coopersmith@sun.com>
Date:   Tue Jun 12 19:13:23 2007 -0700

    X.Org Bug 10775: xclock does not set _NET_WM_PID
    
    X.Org Bugzilla #10775: <https://bugs.freedesktop.org/show_bug.cgi?id=10775>



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.