X.Org Bug 10775: xclock does not set _NET_WM_PID

X.Org Bugzilla #10775: <https://bugs.freedesktop.org/show_bug.cgi?id=10775>